--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <br>
     <span>
         <input type="text" id="playerID" maxlength="16" oninput="updateElement()" style="font-family: monospace;" title="hi"></input>
-        <input type="number" id="GL" style="width: 44px; font-family: monospace;" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength); startGame()" maxlength="4"></input>
+        <input type="number" id="GL" style="width: 44px; font-family: monospace;" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength); updateElement()" maxlength="4"></input>
         <input type="number" id="treasureRng" style="width: 70px; font-family: monospace;"
-            oninput="startGame()"></input>
-        <input type="number" id="tierRng" style="width: 70px; font-family: monospace;" oninput="startGame()"></input>
-        <input type="number" id="cardRng" style="width: 70px; font-family: monospace;" oninput="startGame()"></input>
-        <button onclick="startGame()">Predict</button>
+            oninput="updateElement()"></input>
+        <input type="number" id="tierRng" style="width: 70px; font-family: monospace;" oninput="updateElement()"></input>
+        <input type="number" id="cardRng" style="width: 70px; font-family: monospace;" oninput="updateElement()"></input>
+        <button onclick="updateElement()">Predict</button>
     </span>
     <div id="bingoPredictor" hidden="True">
         <br><br>
