--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <style>
+    @font-face {
+        font-family: Araboto;
+        src: url("Araboto Normal 400.ttf");
+    }
     .grid-container {
         display: inline-grid;
         background-color: #000a58;
@@ -31,16 +35,16 @@
     }
 </style>
 
-<head>
+<head bgcolor="black">
     <title>Gooboo Goober</title>
     <span>
-        <label for="predict">What to predict:</label>
+        <label for="predict" style="color: #FFFFFF;">What to predict:</label>
         <select name="predict" id="predict" onchange="updateElement()">
             <option value="treasure">Treasures</option>
             <option value="card">Cards</option>
             <option value="bingo">Bingo</option>
         </select>
-        <label for="packs" hidden="True" id="packLabel">What pack to predict:</label>
+        <label for="packs" hidden="True" id="packLabel" style="color: #FFFFFF;">What pack to predict:</label>
         <select name="packs" id="selectedPack" onchange="updateElement()" hidden="True">
             <!-- Mining -->
             <option value="intoDarkness">Into Darkness</option>
@@ -68,7 +72,7 @@
     </span>
     <br>
     <span>
-        <input type="file" id="myFile" name="Save File"oninput="inputFile()"></input>
+        <input type="file" id="myFile" name="Save File" oninput="inputFile()" style="color: #FFFFFF;"></input>
         <button onclick="unlockFile()" hidden="True" id="button:D">Unlock File Input</button>
     </span>
     <br>
@@ -118,7 +122,7 @@
     </div>
 </head>
 
-<body onload="">
+<body onload="" bgcolor="#212121">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
     <script src="./JS/Var/CardPacks.js"></script>
     <script src="./JS/Generic.js"></script>
